Updated all other files, included data and tested app via node

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    //Font Awesome Link
+    <title>Eddie's Social Network</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
+      type="text/css"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
-    //Bootstrap Link
+    <link rel="stylesheet" type="text/css" href="/style.css" />
     <link
+      href="https://fonts.googleapis.com/css?family=Baloo|Roboto"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
     />
-    <title>Eddie's Friend Finder App</title>
   </head>
-  <body></body>
+  <body class="site">
+    <div class="container content">
+      <h1>Eddie's Social Network</h1>
+      <p>
+        Welcome to the exclusive new Friend Finder based in NYC!
+      </p>
+
+      <div class="text-center">
+        <a href="/survey"
+          ><button class="btn btn-lg btn-success">Take Survey</button></a
+        >
+      </div>
+    </div>
+
+    <footer>
+      <div class="container">
+        <a href="/api/friends">Discover Friends in NYC API</a>
+        <span>|</span>
+        <a href="https://github.com/ejbronze/Friend-Finder">GitHub Repo</a>
+      </div>
+    </footer>
+
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </body>
 </html>
